# execcmdline

./: README.md  pyproject.toml
execcmdline/: __init__.py  execcmdline.py
